--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -54,11 +54,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="146" id="KfX-Kj-XjB" customClass="TweetCellTableViewCell" customModule="Twitter" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="428" height="146"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="150" id="KfX-Kj-XjB" customClass="TweetCellTableViewCell" customModule="Twitter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="428" height="150"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="KfX-Kj-XjB" id="heH-0a-Qn4">
-                                    <rect key="frame" x="0.0" y="0.0" width="428" height="146"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="428" height="150"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="N47-ER-W7g">
@@ -75,25 +75,55 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Tweet content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o7r-9w-ah3">
-                                            <rect key="frame" x="93" y="37" width="315" height="98"/>
+                                            <rect key="frame" x="93" y="37" width="315" height="52"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Tk-aN-Xin" userLabel="Fav">
+                                            <rect key="frame" x="368" y="99" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="30" id="mbo-jX-pcf"/>
+                                                <constraint firstAttribute="height" constant="30" id="uQA-7K-APE"/>
+                                            </constraints>
+                                            <state key="normal" image="favor-icon">
+                                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </state>
+                                            <connections>
+                                                <action selector="favoriteTweet:" destination="KfX-Kj-XjB" eventType="touchUpInside" id="WBw-xa-FZh"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2eo-b6-N00" userLabel="Retweet button">
+                                            <rect key="frame" x="328" y="99" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="30" id="0wy-xy-06d"/>
+                                                <constraint firstAttribute="height" constant="30" id="5XJ-e2-cNv"/>
+                                            </constraints>
+                                            <state key="normal" image="retweet-icon"/>
+                                            <connections>
+                                                <action selector="retweet:" destination="KfX-Kj-XjB" eventType="touchUpInside" id="fTT-ue-1IO"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <constraints>
+                                        <constraint firstAttribute="bottomMargin" secondItem="1Tk-aN-Xin" secondAttribute="bottom" constant="10" id="2jh-t7-BJZ"/>
                                         <constraint firstItem="vYm-ST-j8T" firstAttribute="leading" secondItem="N47-ER-W7g" secondAttribute="trailing" constant="8" id="3KA-r2-8Sg"/>
                                         <constraint firstItem="o7r-9w-ah3" firstAttribute="trailing" secondItem="heH-0a-Qn4" secondAttribute="trailingMargin" id="3LI-Ty-1cz"/>
+                                        <constraint firstItem="1Tk-aN-Xin" firstAttribute="top" secondItem="o7r-9w-ah3" secondAttribute="bottom" constant="10" id="8UB-dy-Ry7"/>
+                                        <constraint firstItem="1Tk-aN-Xin" firstAttribute="leading" secondItem="2eo-b6-N00" secondAttribute="trailing" constant="10" id="BFF-qe-R77"/>
                                         <constraint firstItem="N47-ER-W7g" firstAttribute="top" secondItem="heH-0a-Qn4" secondAttribute="topMargin" id="HfZ-zc-ThW"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="o7r-9w-ah3" secondAttribute="bottom" id="QYf-IA-NSK"/>
                                         <constraint firstItem="o7r-9w-ah3" firstAttribute="top" secondItem="vYm-ST-j8T" secondAttribute="bottom" constant="4" id="U92-r3-8PB"/>
                                         <constraint firstItem="vYm-ST-j8T" firstAttribute="top" secondItem="heH-0a-Qn4" secondAttribute="topMargin" id="XKh-3s-2Eu"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="2eo-b6-N00" secondAttribute="bottom" constant="10" id="Zyx-Pg-nlI"/>
                                         <constraint firstItem="o7r-9w-ah3" firstAttribute="leading" secondItem="N47-ER-W7g" secondAttribute="trailing" constant="8" id="qtv-go-dXH"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="1Tk-aN-Xin" secondAttribute="trailing" constant="10" id="ugY-DU-hJP"/>
                                         <constraint firstItem="N47-ER-W7g" firstAttribute="leading" secondItem="heH-0a-Qn4" secondAttribute="leadingMargin" id="x7D-kB-XP5"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="favButton" destination="1Tk-aN-Xin" id="nqa-Vc-Gdv"/>
                                     <outlet property="profileImageView" destination="N47-ER-W7g" id="Uji-wO-8ki"/>
+                                    <outlet property="retweetButton" destination="2eo-b6-N00" id="4BU-T9-fRe"/>
                                     <outlet property="tweetContent" destination="o7r-9w-ah3" id="JoP-ia-TSJ"/>
                                     <outlet property="userNameLabel" destination="vYm-ST-j8T" id="Lgx-cf-4HS"/>
                                 </connections>
@@ -111,11 +141,73 @@
                                 <action selector="onLogout:" destination="gjw-S2-nOo" id="iyU-66-j4j"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Tweet" id="DCP-OH-kZc">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <segue destination="aZ2-DM-GMG" kind="presentation" id="9TO-8v-n9L"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0hM-Lh-uZm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="556.54205607476638" y="-220.30237580993523"/>
+        </scene>
+        <!--Tweet View Controller-->
+        <scene sceneID="EfH-7T-uLl">
+            <objects>
+                <viewController id="mkF-fL-z7q" customClass="TweetViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ZTZ-3J-GOG">
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="872"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="OGT-Pt-jlP">
+                                <rect key="frame" x="0.0" y="56" width="428" height="128"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="F8Z-Pb-QSp"/>
+                                </constraints>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="oQP-7C-QWz"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="OGT-Pt-jlP" firstAttribute="trailing" secondItem="oQP-7C-QWz" secondAttribute="trailing" id="0nH-Kb-WOJ"/>
+                            <constraint firstItem="OGT-Pt-jlP" firstAttribute="leading" secondItem="oQP-7C-QWz" secondAttribute="leading" id="5sd-o7-Zhz"/>
+                            <constraint firstItem="OGT-Pt-jlP" firstAttribute="leading" secondItem="oQP-7C-QWz" secondAttribute="leading" id="8qf-eO-yf9"/>
+                            <constraint firstItem="OGT-Pt-jlP" firstAttribute="top" secondItem="oQP-7C-QWz" secondAttribute="top" id="Bos-fV-Wk6"/>
+                            <constraint firstItem="OGT-Pt-jlP" firstAttribute="top" secondItem="oQP-7C-QWz" secondAttribute="top" id="U68-s9-NA4"/>
+                            <constraint firstItem="OGT-Pt-jlP" firstAttribute="trailing" secondItem="oQP-7C-QWz" secondAttribute="trailing" id="eKY-FJ-Vs3"/>
+                            <constraint firstItem="OGT-Pt-jlP" firstAttribute="leading" secondItem="oQP-7C-QWz" secondAttribute="leading" id="gVY-8q-6zj"/>
+                            <constraint firstItem="oQP-7C-QWz" firstAttribute="trailing" secondItem="OGT-Pt-jlP" secondAttribute="trailing" id="lMJ-C5-lV5"/>
+                            <constraint firstItem="OGT-Pt-jlP" firstAttribute="top" secondItem="oQP-7C-QWz" secondAttribute="top" id="mPa-ie-r1N"/>
+                            <constraint firstItem="OGT-Pt-jlP" firstAttribute="top" secondItem="oQP-7C-QWz" secondAttribute="top" id="vqS-ZY-as2"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="LQT-Y4-YVc">
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="2LI-3Z-aC3">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="cancel:" destination="mkF-fL-z7q" id="RKW-Ad-Svg"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Tweet" id="X93-pR-baX">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="tweet:" destination="mkF-fL-z7q" id="Wpl-6G-q5n"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tweetTextView" destination="OGT-Pt-jlP" id="KUG-zw-hiy"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tS9-7N-Mvp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2353.7383177570091" y="-205.39956803455726"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="LCT-en-A8A">
@@ -140,8 +232,29 @@
             </objects>
             <point key="canvasLocation" x="-322" y="-220"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="xBq-8X-HKK">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="aZ2-DM-GMG" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Pmk-N9-PHS">
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="56"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" systemColor="systemBlueColor"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="mkF-fL-z7q" kind="relationship" relationship="rootViewController" id="fKi-Gj-Fkd"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MMs-0t-p76" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1453.7383177570093" y="-205.39956803455726"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="favor-icon" width="30" height="30"/>
+        <image name="retweet-icon" width="30" height="30"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
@@ -150,6 +263,9 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
